--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ JWT_SECRET=msParkerCOMFORT2025
 
 SMTP_USER=comfortparker720@gmail.com
 SMTP_PASS=bsjd lmro eauu ibut
-CLIENT_URL= http://github.com/ApexAchievers/labsync
+CLIENT_URL= http://labsyncapp.netlify.app/tech-page
